// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedTileEnlarged renders with default values 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      transform=""
    >
      <path
        d="M -45 0 A 10 10 0 0 1 -55 10 L -55 100 L 0 100 A 45 45 0 0 0 45 55 L 45 0 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M -45 0 A 10 10 0 0 1 -47.928932188134524 7.071067811865475 L -44.39339828220179 10.606601717798211 A 15 15 0 0 0 -40 0 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -47.928932188134524 7.071067811865475 A 10 10 0 0 1 -55 10 L -55 15 A 15 15 0 0 0 -44.39339828220179 10.606601717798211 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 40 55 A 40 40 0 0 1 28.284271247461902 83.2842712474619 L 31.81980515339464 86.81980515339464 A 45 45 0 0 0 45 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 28.284271247461902 83.2842712474619 A 40 40 0 0 1 2.4492935982947065e-15 95 L 2.7554552980815448e-15 100 A 45 45 0 0 0 31.81980515339464 86.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="-55"
          y="95"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="-27.5"
          y="95"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="40"
          y="0"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="40"
          y="27.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged renders with the given parameters for a tile oriented to the left with an angle of 0˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform="rotate(90 100 205)"
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged renders with the given parameters for a tile oriented to the left with an angle of 45˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform="rotate(45 100 150)rotate(90 100 205)"
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 0.5 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform=""
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform=""
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 2 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform=""
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 3 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform=""
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged renders with the given parameters for a tile oriented to the right with an angle of 0˚ and a ratio of 4 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform=""
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged renders with the given parameters for a tile oriented to the right with an angle of 45˚ and a ratio of 1 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform="rotate(45 100 150)"
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged updates when the parameter angle is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform="rotate(45 100 150)"
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged updates when the parameter direction is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform="rotate(90 100 205)"
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged updates when the parameter ratio is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform=""
    >
      <path
        d="M 55 150 A 10 10 0 0 1 45 160 L 45 250 L 100 250 A 45 45 0 0 0 145 205 L 145 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 150 A 10 10 0 0 1 52.071067811865476 157.07106781186548 L 55.60660171779821 160.6066017177982 A 15 15 0 0 0 60 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 157.07106781186548 A 10 10 0 0 1 45 160 L 45 165 A 15 15 0 0 0 55.60660171779821 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 205 A 40 40 0 0 1 128.2842712474619 233.2842712474619 L 131.81980515339464 236.81980515339464 A 45 45 0 0 0 145 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 233.2842712474619 A 40 40 0 0 1 100 245 L 100 250 A 45 45 0 0 0 131.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged updates when the parameter x is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform=""
    >
      <path
        d="M -5 150 A 10 10 0 0 1 -15 160 L -15 250 L 40 250 A 45 45 0 0 0 85 205 L 85 150 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M -5 150 A 10 10 0 0 1 -7.9289321881345245 157.07106781186548 L -4.393398282201787 160.6066017177982 A 15 15 0 0 0 0 150 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -7.9289321881345245 157.07106781186548 A 10 10 0 0 1 -15 160 L -14.999999999999998 165 A 15 15 0 0 0 -4.393398282201787 160.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 80 205 A 40 40 0 0 1 68.2842712474619 233.2842712474619 L 71.81980515339464 236.81980515339464 A 45 45 0 0 0 85 205 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 68.2842712474619 233.2842712474619 A 40 40 0 0 1 40 245 L 40 250 A 45 45 0 0 0 71.81980515339464 236.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="-15"
          y="245"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="12.5"
          y="245"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="80"
          y="150"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="80"
          y="177.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;

exports[`CurvedTileEnlarged updates when the parameter y is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform=""
    >
      <path
        d="M 55 40 A 10 10 0 0 1 45 50 L 45 140 L 100 140 A 45 45 0 0 0 145 95 L 145 40 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55 40 A 10 10 0 0 1 52.071067811865476 47.071067811865476 L 55.60660171779821 50.60660171779821 A 15 15 0 0 0 60 40 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476 47.071067811865476 A 10 10 0 0 1 45 50 L 45 55 A 15 15 0 0 0 55.60660171779821 50.60660171779821 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140 95 A 40 40 0 0 1 128.2842712474619 123.2842712474619 L 131.81980515339464 126.81980515339464 A 45 45 0 0 0 145 95 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619 123.2842712474619 A 40 40 0 0 1 100 135 L 100 140 A 45 45 0 0 0 131.81980515339464 126.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-even)"
          height="5"
          width="27.5"
          x="45"
          y="135"
        />
        
        <rect
          fill="var(--color-odd)"
          height="5"
          width="27.5"
          x="72.5"
          y="135"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <rect
          fill="var(--color-odd)"
          height="27.5"
          width="5"
          x="140"
          y="40"
        />
        
        <rect
          fill="var(--color-even)"
          height="27.5"
          width="5"
          x="140"
          y="67.5"
        />
      </g>
    </g>
    
  </div>
</body>
`;
